--- a/styles/main.css
+++ b/styles/main.css
@@ -29,10 +29,10 @@ ul {
   padding-inline-start: 0.25rem;
 }
 
-#orderButton {
+/* #orderButton {
   margin: 1rem 0 2rem 2rem;
   padding: 0.5rem;
   background-color: rgb(227, 72, 72);
   color: lightgoldenrodyellow;
   font-size: 1rem;
-}
+} */
