--- a/styles/main.css
+++ b/styles/main.css
@@ -1,27 +1,18 @@
 @import "details.css";
 @import url("https://fonts.googleapis.com/css?family=Comfortaa|Patua+One");
 
-/*Typography
---------------------------------------------------------------*/
-body,
-button,
-input,
-select,
-textarea {
+/* textarea {
   color: #404040;
   font-family: "Comfortaa", Arial, sans-serif;
   font-size: 14px;
   line-height: 1.5;
-}
+} */
 
-h1,
-h2,
-h3,
-h4,
-h5,
-h6 {
+h1 {
   font-family: "Patua One", serif;
-  letter-spacing: 2px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 ul {
@@ -29,10 +20,10 @@ ul {
   padding-inline-start: 0.25rem;
 }
 
-/* #orderButton {
+#orderButton {
   margin: 1rem 0 2rem 2rem;
   padding: 0.5rem;
   background-color: rgb(227, 72, 72);
   color: lightgoldenrodyellow;
   font-size: 1rem;
-} */
+}
